<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr</name>
  <version>2.2.6</version>
  <description>
    AMR in Gazebo
  </description>
  <maintainer email="ppp109403@kaist.ac.kr">JinhoPark</maintainer>
  <license>A</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>turtlebot3_navigation2</depend>
  <build_depend>nav2_common</build_depend>
  <build_depend>navigation2</build_depend>
  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>amr_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
