<?xml version="1.0"?>
<package format="3">
  <name>eai_task_server</name>
  <version>0.0.1</version>
  <description>Simple task publisher for EAI scenarios.</description>
  <maintainer email="marco@example.com">marco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sml_messages</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
