<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sml_system_pkg</name>
  <version>0.0.1</version>
  <description>SML 시스템 노드 패키지 (PlanningNode, ManagerNode)</description>

  <maintainer email="todo@todo.com">todo</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>sml_msgs</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
