<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>msgs_pkg</name>
  <version>0.0.0</version>
  <description>Custom message package for pick and place project</description>

  <maintainer email="scr@todo.todo">scr</maintainer>
  <license>Apache-2.0</license>

  <!-- ✅ Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ✅ Message generation -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- ✅ Runtime dependency -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ✅ Declare this package provides interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
